# vibeOS

./: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  eslint.config.mjs  meow.py  next.config.ts  package.json  requirements.txt  test-gcp.html
experiments/browser-use-CDP/: .gitignore  README.md  example_workflow.py  main.py  pyproject.toml  setup_session.py  setup_session_stealth.py
scripts/: start-browser.js
src/: claude-code-handler.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/kernel/browsers/: route.ts
src/app/api/system/dark-mode/: route.ts
src/app/ipad/: page.tsx
src/app/neo/: page.tsx
src/app/productivity-demo/: page.tsx
src/components/: NativeTerminal.tsx  browser.tsx  claude-chat-new.tsx  claude-chat.tsx  crypto-tracker.tsx  dark-mode-toggle.tsx  dedalus-chat.tsx  download-tinder.tsx  file-browser-enhanced.tsx  file-browser.tsx  gcp-vm-list-simple.tsx  gcp-vm-list.tsx  macos-dock.tsx  macos-icons.tsx  notes-app.tsx  terminal.tsx  windows-taskbar.tsx
src/components/ui/: button.tsx  glass-effect.tsx  slider.tsx
src/lib/: glass-styles.ts
src/server/: browser-use-runner.py  dedalus-runner.py
src/server/api/: root.ts  trpc.ts
src/server/api/routers/: browser-use.ts  click.ts  crypto.ts  dedalus.ts  files.ts  gcp.ts  kernel.ts  terminal.ts
src/utils/: api.tsx
