[project]
name = "browser-use-cdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.6.1",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
stealth = [
    "patchright>=1.40.0",  # Stealth version of playwright
]
